select CDN service endpoint
